tests/syntax/error_bad_return_if.silly
// RUN: cd %S
// RUN: %Not %ExeSilly -g error_bad_return_if.silly -o %t.exe 2>&1 | %FileCheck %s
// CHECK: error_bad_return_if.silly:9:5: error: RETURN is not currently allowed in a IF block
// CHECK:     9 |     RETURN 0;
// CHECK:       |     ^

IF (1 EQ 1)
{
    RETURN 0;
};
